--- a/templates/default/rhel/supervisor.init.erb
+++ b/templates/default/rhel/supervisor.init.erb
@@ -15,8 +15,8 @@ source /etc/rc.d/init.d/functions
 start() {
     echo -n "Starting supervisor: "
     # status() returns 0 if and only if the service is properly started.
-    status supervisord > /dev/null && echo "already running" && return 0
-    daemon "<%= @supervisord %> -c <%= node['supervisor']['conffile'] %> <%= @node['supervisor']['daemon_options'] %>"
+    status <%= node['supervisor']['pid_option'] %>supervisord > /dev/null && echo "already running" && return 0
+    daemon <%= node['supervisor']['pid_option'] %> "<%= @supervisord %> -c <%= node['supervisor']['conffile'] %> <%= @node['supervisor']['daemon_options'] %>"
     RETVAL=$?
     echo
     [ $RETVAL -ne 0 ] && return $RETVAL
@@ -26,10 +26,10 @@ start() {
 
 stop() {
     echo -n "Shutting down supervisor: "
-    status supervisord > /dev/null
+    status <%= node['supervisor']['pid_option'] %>supervisord > /dev/null
     # status() returns 3 if and only if the service is properly stopped.
     [ $? -eq 3 ] && echo "already stopped" && return 0
-    killproc supervisord
+    killproc <%= node['supervisor']['pid_option'] %>supervisord
     RETVAL=$?
     echo
     [ $RETVAL -ne 0 ] && return $RETVAL
